--- a/styles/loginpage.css
+++ b/styles/loginpage.css
@@ -86,7 +86,7 @@ body {
 
 /* end */
 
-/* style homepage */
+/* style Log in */
 
 .logo-sign-up-container {
   display: flex;
@@ -109,16 +109,32 @@ body {
 }
 
 .sign-up-log-in-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-left: 16px;
   padding-right: 16px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   border-radius: 8px;
   border: none;
   background-color: rgba(42, 54, 71, 1);
   color: rgba(255, 255, 255, 1);
   cursor: pointer;
   font-size: 21px;
+  font-weight: 700;
+}
+
+.width-log-in-button {
+  width: 110px;
+}
+
+.width-guest-log-in-button {
+  width: 177px;
+}
+
+.width-guest-log-in-button {
+  width: 177px;
 }
 
 .sign-up-log-in-button:hover {
@@ -211,6 +227,7 @@ body {
   align-items: center;
   gap: 8px;
   padding-left: 39px;
+  padding-top: 16px;
   width: 422px;
 }
 
@@ -224,10 +241,9 @@ body {
 }
 
 .guest-log-in-button {
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 8px;
   text-decoration: none;
   border: 1px solid rgba(42, 54, 71, 1);
@@ -235,6 +251,7 @@ body {
   color: rgba(42, 54, 71, 1);
   cursor: pointer;
   font-weight: 700;
+  height: 48px;
   font-size: 21px;
 }
 
@@ -244,9 +261,10 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.submit-login-container {
+.submit-log-in-container {
   display: flex;
   gap: 35px;
+  padding-top: 12px;
 }
 
 .loginpage-data-protection-container {
@@ -254,7 +272,7 @@ body {
   justify-content: center;
   align-items: center;
   position: absolute;
-  bottom: 35px;
+  bottom: 24px;
   gap: 8px;
   width: 100%;
 }
@@ -272,6 +290,10 @@ body {
   font-weight: 700;
   color: rgba(41, 171, 226, 1);
 }
+
+/* end */
+
+/* style Sign up*/
 
 .sign-up-container {
   display: flex;
@@ -300,6 +322,38 @@ body {
 .arrow-back-sign-up-container:hover {
   background-color: rgba(12, 46, 98, 0.12);
   transform: scale(1.1);
+}
+
+.accept-privacy-policy-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding-top: 16px;
+}
+
+.submit-sign-up-container {
+  display: flex;
+  gap: 35px;
+  padding-top: 12px;
+}
+
+.d-none {
+  display: none;
+}
+
+.sign-up-data-protection-link {
+  padding: 5px;
+  font-weight: 400;
+  color: rgba(41, 171, 226, 1);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.sign-up-data-protection-link:hover {
+  text-decoration: underline;
+  .remember-me-icon {
+    transform: scale(1.05);
+  }
 }
 
 
