--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -15,13 +15,13 @@ body{
     margin-left: 328px;
     /* gap:1px; */
 }
+
 .text_addTask{
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 700;
     font-size: 61px;
     color: #000000;
-    line-height: 73.2px;
-    
+    line-height: 73.2px;    
 }
 
 .group66_addTask{
@@ -78,7 +78,7 @@ body{
 .text_enterTitle{
     width: 398px;
     height: 24px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
@@ -114,7 +114,7 @@ input::placeholder{/*changes the colour of the placeholder text in the input fie
 
 .description{ 
     height: 24px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
@@ -154,7 +154,7 @@ height: 32px;
     flex: 1;
     display:flex;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     width: 440px;
     
 }
@@ -176,7 +176,7 @@ height: 32px;
 .text_enterDescription{
     /* position: absolute; */
     display: flex;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     background-color: white;
     padding: 18px 16px; 
     border: 1px solid #D1D1D1;
@@ -194,7 +194,7 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
 .descriptionFieldRequired{
     width: 438px;
     height: 12px;
-    font-family: 'Poppins', sans-serif;; 
+    font-family: "Poppins", sans-serif;; 
     font-weight: 400;
     font-size: 12px;
     line-height: 14.4px;
@@ -212,7 +212,7 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
 
 .asignedTo{
     width: 112px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px; 
@@ -236,7 +236,7 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
 
 .text_assignedTo{
     color: var(--black, #000);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -246,11 +246,13 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
 .imgArrows{
     width: 24px;
     height: 24px; 
+    
 }
 
 .arrow_drop_down{
     width: 24px;
     height: 24px;   
+    
 }
 
 .arrow_drop_downHover{
@@ -268,7 +270,7 @@ display: block; /* Show the hover image when the container is being hovered */
 
 span{
     color: #FF8190;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -308,10 +310,11 @@ span{
 }
 
 .text_DueDate{
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
+    
 }
 
 .frame211{
@@ -341,11 +344,11 @@ span{
     justify-content: space-between;
     width: 404px;
     height: 24px;
-    font-family:'inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
-    color: var(--Style, #D1D1D1);
+    color: var(--black, #000);
     border-style: none;
     outline:none;
 }
@@ -366,7 +369,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .dueDateFieldRequired{
     width: 119px;
     height: 12px;
-    font-family: 'Poppins', sans-serif; 
+    font-family: "Poppins", sans-serif; 
     font-weight: 400;
     font-size: 12px;
     line-height: 14.4px;
@@ -381,7 +384,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .textPrio{
     width: 37px;
     height: 24px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -417,7 +420,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .textUrgent{
     width: 65px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -455,7 +458,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .textMedium{
     width: 84px;
     height: 24px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -486,7 +489,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .textLow{
     width: 40px;
     height: 24px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -497,38 +500,62 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 14.51px;
 }
 
-.category{
+.categoryCard{  
     display: flex;
-    width: 440px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;    
+}
+
+
+.TechnicalTask{
+    padding: 4px 24px;
+    border-radius: 8px;
+    background: #1FD7C1;
+    color: #FFF;
+    font-family: "open-sans", sans-serif;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 27.6px; 
+}
+
+
+
+.UserStory{
+    padding: 4px 24px;
+    border-radius: 8px;
+    background: #0038FF;
+    color: #FFF;
+    font-family: "open-sans", sans-serif;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 27.6px; 
 }
 
 .textCategory{
-    color: var(--Version-2-main-color, #2A3647);
-    font-family: 'Inter', sans-serif;
+    color: var(--black, #000);
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
 }
 
 .categoryFrame74{
+    z-index: 6;
     display: flex;
     padding: 12px 16px;
     justify-content: space-between;
-    align-items: center;
+  position: relative;
     border-radius: 10px;
     border: 1px solid var(--Style, #D1D1D1);
     background: var(--white, #FFF);
     color: var(--black, #000);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
-    outline: none;
-    border-style: none;
-    width: 100%;  
+    outline: none;   
+    width: 410px;  
 }
 
 .categoryFrame74:hover{
@@ -538,34 +565,41 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
     .categories{
  
-        font-family: 'Inter', sans-serif;
+        font-family: "Inter", sans-serif;
         font-size: 20px;
         font-weight: 400;
-        line-height: 24px;
-    }                 
+        line-height: 24px;    
+       
+    }        
+    
+    .options select:hover{
+
+        background-color: #FF3D00; 
+    }
                                         
+
 
 .disabledSelected{
     display: none;
 }
 
 
-/* Warum functioniert das HOVERN hier nicht? */
-
-.custom-select{      
+.custom-select{    
+   
     border: 1px solid var(--Style, #D1D1D1);               
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     /* Apply the background image to the select element */
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 25 24' fill='none'%3E%3Cmask id='mask0_116471_1860' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Crect x='0.144531' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_116471_1860)'%3E%3Cpath d='M11.4445 14.3L8.84451 11.7C8.52784 11.3833 8.45701 11.0208 8.63201 10.6125C8.80701 10.2042 9.11951 10 9.56951 10H14.7195C15.1695 10 15.482 10.2042 15.657 10.6125C15.832 11.0208 15.7612 11.3833 15.4445 11.7L12.8445 14.3C12.7445 14.4 12.6362 14.475 12.5195 14.525C12.4028 14.575 12.2778 14.6 12.1445 14.6C12.0112 14.6 11.8862 14.575 11.7695 14.525C11.6528 14.475 11.5445 14.4 11.4445 14.3Z' fill='%232A3647'/%3E%3C/g%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: right center;   
-  }   
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 24' fill='none'%3E%3Cmask id='mask0_116471_1860' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Crect x='0.144531' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_116471_1860)'%3E%3Cpath d='M11.4445 14.3L8.84451 11.7C8.52784 11.3833 8.45701 11.0208 8.63201 10.6125C8.80701 10.2042 9.11951 10 9.56951 10H14.7195C15.1695 10 15.482 10.2042 15.657 10.6125C15.832 11.0208 15.7612 11.3833 15.4445 11.7L12.8445 14.3C12.7445 14.4 12.6362 14.475 12.5195 14.525C12.4028 14.575 12.2778 14.6 12.1445 14.6C12.0112 14.6 11.8862 14.575 11.7695 14.525C11.6528 14.475 11.5445 14.4 11.4445 14.3Z' fill='%232A3647'/%3E%3C/g%3E%3C/svg%3E");
+    background-repeat: no-repeat;    
+    background-position: calc(100% - 16px) center;/* Adjusted position with margin-right */
+}
 
 .custom-select:hover{      
-  background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 24 25' fill='none'%3E%3Cg id='Property 1=Variant2'%3E%3Crect y='0.96582' width='24' height='24' rx='12' fill='%23EEEEEE'/%3E%3Cmask id='mask0_75597_14127' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='24' height='25'%3E%3Crect id='Bounding box' y='0.96582' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_75597_14127)'%3E%3Cpath id='arrow_drop_down' d='M11.3005 15.2658L8.70046 12.6658C8.3838 12.3492 8.31296 11.9867 8.48796 11.5783C8.66296 11.17 8.97546 10.9658 9.42546 10.9658H14.5755C15.0255 10.9658 15.338 11.17 15.513 11.5783C15.688 11.9867 15.6171 12.3492 15.3005 12.6658L12.7005 15.2658C12.6005 15.3658 12.4921 15.4408 12.3755 15.4908C12.2588 15.5408 12.1338 15.5658 12.0005 15.5658C11.8671 15.5658 11.7421 15.5408 11.6255 15.4908C11.5088 15.4408 11.4005 15.3658 11.3005 15.2658Z' fill='%232A3647'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}                                                               
+    background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 24 25' fill='none'%3E%3Cg id='Property 1=Variant2'%3E%3Crect y='0.96582' width='24' height='24' rx='12' fill='%23EEEEEE'/%3E%3Cmask id='mask0_75597_14127' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='24' height='25'%3E%3Crect id='Bounding box' y='0.96582' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_75597_14127)'%3E%3Cpath id='arrow_drop_down' d='M11.3005 15.2658L8.70046 12.6658C8.3838 12.3492 8.31296 11.9867 8.48796 11.5783C8.66296 11.17 8.97546 10.9658 9.42546 10.9658H14.5755C15.0255 10.9658 15.338 11.17 15.513 11.5783C15.688 11.9867 15.6171 12.3492 15.3005 12.6658L12.7005 15.2658C12.6005 15.3658 12.4921 15.4408 12.3755 15.4908C12.2588 15.5408 12.1338 15.5658 12.0005 15.5658C11.8671 15.5658 11.7421 15.5408 11.6255 15.4908C11.5088 15.4408 11.4005 15.3658 11.3005 15.2658Z' fill='%232A3647'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-position: calc(100% - 16px) center; /* Adjusted position with margin-right on hover */
+}                                                             
 
 .subtasks{
     height: 76px;
@@ -574,7 +608,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;    
+    
 }
+
+
 
 
 .subtasksContents{
@@ -586,13 +623,11 @@ gap: 16px;
 }
 
 
-
 .titleSubtasks{
 width: 100%;
+color: var(--black, #000);
 
-color: var(--Version-2-main-color, #2A3647);
-
-font-family: 'Inter', sans-serif;
+font-family: "Inter", sans-serif;
 font-size: 20px;
 font-style: normal;
 font-weight: 400;
@@ -618,9 +653,7 @@ line-height: 120%; /* 24px */
 }
 
 
-.checkbox-custom:hover {
-    background-color: #7AE229;
-}
+
 /* Style the custom checkbox for checked state */
 .checkbox-input:checked + .checkbox-custom {
     /* display: inline-block; */
@@ -647,7 +680,6 @@ line-height: 120%; /* 24px */
     display: flex;
     align-items: center;
     gap: 8px;
-
 }
 
 .subTasksCard{
@@ -655,7 +687,7 @@ line-height: 120%; /* 24px */
     flex-direction: column;
     gap: 8px;
     align-self: stretch;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -664,8 +696,8 @@ line-height: 120%; /* 24px */
 .textSubtasks{
     width: 88px;
     height: 24px;
-    color: var(--Version-2-main-color, #2A3647);
-    font-family: 'Inter', sans-serif;
+    color: var(--black, #000);
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -685,7 +717,7 @@ line-height: 120%; /* 24px */
 .textAddSubtasks{
     width: 170px;
     height: 24px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -759,7 +791,7 @@ line-height: 120%; /* 24px */
 .comment{
     width: 170px;
     height: 27px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -795,7 +827,7 @@ line-height: 120%; /* 24px */
     width: 50px;
     height: 24px;
     color: var(--Version-2-main-color, #2A3647);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -851,7 +883,7 @@ line-height: 120%; /* 24px */
     height: 24px;
     color: #FFF;
 
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 21px;
     font-weight: 700;
     line-height: 24px;
@@ -882,7 +914,7 @@ line-height: 120%; /* 24px */
 .taskTitle{       
     align-self: stretch;
     color: var(--black, #000);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 61px;
     font-weight: 700;
     line-height: 73.2px;
@@ -890,7 +922,7 @@ line-height: 120%; /* 24px */
 
 .description{
     color: var(--black, #000);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px; /* 24px */
@@ -905,7 +937,7 @@ line-height: 120%; /* 24px */
 
 .TitleDueDate{
     color: var(--Version-2-main-color, #2A3647);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -917,7 +949,7 @@ line-height: 120%; /* 24px */
 }
 .date{
     color: var(--black, #000);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px; 
@@ -953,7 +985,7 @@ line-height: 120%; /* 24px */
     line-height: 24px;
     width: 73px;
 
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     
 }
@@ -976,16 +1008,15 @@ line-height: 120%; /* 24px */
     width: 100%;
     gap:25px;
     color: var(--Version-2-main-color, #2A3647);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 120%; /* 24px */
-    background-color: #7AE229;
 }
 
 .assignedSecond{
     color: var(--Version-2-main-color, #2A3647);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 120%; /* 24px */
@@ -1006,10 +1037,57 @@ line-height: 120%; /* 24px */
 
 .allSubtasks{
     display: flex;
-    height: 200px;
-    width: 100px;
-   background-color: #FF8190;
-   
+    flex-direction: column; 
+    gap: 8px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 120%;
+    margin-left: 24px;   
 }
 
 
+
+/*Category*/
+
+.underList{ 
+     margin-top: -20px;
+    position: absolute;  
+    display: flex;
+    padding-inline-start: 0px;
+    flex-direction: column;
+    border-radius: 10px;
+    background: var(--white, #FFF); 
+    z-index: 1;
+}
+
+.options{  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    background: var(--white, #FFF);
+    list-style: none;
+    padding: 12px 16px;
+    align-items: center;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;   
+    font-weight: 400;
+    line-height: 24px;
+    width:410px;
+}
+
+.optionsMarginTop{
+margin-top: 14px;
+}
+.options:hover{
+   background: #eeeeee;
+}
+
+.hide{
+    visibility: hidden;
+}
+
+.rotate{
+    transform: rotate(180deg);
+}
