--- a/styles/loginpage.css
+++ b/styles/loginpage.css
@@ -11,6 +11,7 @@
 body {
   background-color: rgb(246, 247, 248);
   font-family: "Inter", sans-serif;
+  display: flex;
   overflow: hidden;
 }
 
@@ -231,12 +232,21 @@ body {
   width: 422px;
 }
 
-.remember-me-icon {
+.accept-icon {
+  appearance: none;
   cursor: pointer;
   margin: 0;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='25' viewBox='0 0 24 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='4' y='4.96582' width='16' height='16' rx='3' stroke='%232A3647' stroke-width='2'/%3E%3C/svg%3E%0A");
 }
 
-.remember-me-icon:hover {
+.accept-icon:checked {
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='25' viewBox='0 0 24 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 11.9658V17.9658C20 19.6227 18.6569 20.9658 17 20.9658H7C5.34315 20.9658 4 19.6227 4 17.9658V7.96582C4 6.30897 5.34315 4.96582 7 4.96582H15' stroke='%232A3647' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M8 12.9658L12 16.9658L20 5.46582' stroke='%232A3647' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.accept-icon:hover {
   transform: scale(1.05);
 }
 
@@ -366,4 +376,39 @@ body {
   color: rgba(255, 129, 144, 1);
 }
 
+.container-register-successfully {
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  z-index: 800;
+}
+
+.msg-register-successfully {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(255, 255, 255, 1);
+  background: rgba(42, 54, 71, 1);
+  border-radius: 20px;
+  font-size: 20px;
+  font-weight: 400;
+  height: 74px;
+  width: 312px;
+  z-index: 999;
+  animation: moveUpToCenter 1s ease forwards;
+}
+
+@keyframes moveUpToCenter {
+  from {
+      transform: translateY(100vh); /* Startet am unteren Bildschirmrand */
+  }
+  to {
+      transform: translateY(0); /* Bewegt sich zur Mitte des Bildschirms */
+  }
+}
 
